fixing header click on mobile

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -4,9 +4,11 @@
   inline-size: max-content;
   &__title {
     cursor: pointer;
-    :hover {
-      background-color: #b6a8bd;
-      border-radius: 15px;
+    @media(hover: hover) and (pointer: fine) {
+      :hover {
+        background-color: #b6a8bd;
+        border-radius: 15px;
+      }
     }
   }
 }
